Update & Bug Fix

--- a/src/main/resources/index.html
+++ b/src/main/resources/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head><title>jpro Application: Hello JPro</title>
+<head><title>STFC Quizz Client</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
     <link rel="stylesheet" type="text/css" href="/jpro/css/jpro-fullscreen.css">
     <link rel="stylesheet" type="text/css" href="/jpro/css/jpro.css">
